Made corrections from code review- removed div from nav and removed flex wrap property from portfolio in css.

--- a/portfolio.css
+++ b/portfolio.css
@@ -111,7 +111,6 @@ p {
 
 .portfolio {
 	display: flex;
-	flex-wrap: wrap;
 	flex-direction: column;
 	padding: 1vw 0;
 }
